force-app/main/default/objects/Quote_Applied_Discounts__c/Quote_Applied_Discounts__c.object-meta.xml
<CustomObject>
    <label>Quote Applied Discounts</label>
    <nameField>
        <label>Applied Discounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Applied Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>