force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Applied_Offer__c.field-meta.xml
<CustomField>
    <fullName>Applied_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Offer</label>
    <referenceTo>Offer_Master__c</referenceTo>
    <relationshipLabel>Quote Applied Discounts</relationshipLabel>
    <relationshipName>Quote_Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>