force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Monetizable__c.field-meta.xml
<CustomField>
    <fullName>Monetizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monetizable</label>
    <type>Checkbox</type>
</CustomField>