force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Offer_calculation__c.field-meta.xml
<CustomField>
    <fullName>Offer_calculation__c</fullName>
    <label>Offer calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
            <value>
                <fullName>PSF</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>