force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Quote Applied Discounts</relationshipLabel>
    <relationshipName>Quote_Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>