force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Quote Applied Discounts</relationshipLabel>
    <relationshipName>Quote_Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>