force-app/main/default/objects/Quote_Applied_Discounts__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Quote Applied Discounts</relationshipLabel>
    <relationshipName>Quote_Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>